make adjustment to create page

--- a/src/app/create/create.page.html
+++ b/src/app/create/create.page.html
@@ -17,6 +17,8 @@
 <ion-label position="floating">Diary Description</ion-label>
 <ion-input type="text" formControlName="info_description"></ion-input>
 </ion-item>
+&nbsp;
+
 <ion-button shape="round" color="primary" expand="block" [disabled]="!infoForm.valid" (click)="saveDiary()">Save</ion-button>
 </form>
 </ion-content>
