--- a/src/app/create/create.page.html
+++ b/src/app/create/create.page.html
@@ -15,7 +15,7 @@
 </ion-item>
 <ion-item>
 <ion-label position="floating">Diary Description</ion-label>
-<ion-input type="text" formControlName="info_description"></ion-input>
+<ion-textarea type="text" formControlName="info_description"></ion-textarea>
 </ion-item>
 &nbsp;
 
